# iCEFARM

./: .dockerignore  .gitignore  .uvicorn_env_bridge  404.html  Database.py  DeviceManager.py  README.md  TESTING_VARIANCE.md  client.py  clutils.py  heartbeat.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirments.txt  server.py  usbipicecl.py  utils.py
.github/workflows/: deploy_website.yml  development.yml  docker.yml  main.yml  pypi.yml  test.yml
Contributing/: index.html
Contributing/editing_website/: index.html
Developer_Guide/: index.html
Developer_Guide/API/: index.html
Developer_Guide/communication/: index.html
Developer_Guide/development_setup/: index.html
Developer_Guide/states/: index.html
User_Guide/: index.html
client/: Client.py  DeviceUtils.py  EventHandler.py  EventServer.py  README.md  TimeoutDetector.py  __init__.py  cli.py  client.py
control/: ControlDatabase.py  HeartbeatDatabase.py  __init__.py  heartbeat.py  server.py
deploy/: Dockerfile  compose.yml  test_compose.yml
docker/: Dockerfile  client.Dockerfile  compose.yml  test_compose.yml
docs/: .nav.yml  client_usage.md  communication.md  development_setup.md  getting_started.md  index.md  overview.md  states.md
docs/API/: .nav.yml  index.md  (+4 more)
firmware/: README.md  build.sh
getting_started/: index.html
guides/: state.md
search/: search_index.json
tests/: conftest.py  pulsecount_stack.py  test_clear_workers.py  test_endpoints.py  utils.py
utils/: usbip.py  utils.py
worker/: Device.py  DeviceManager.py  WorkerDatabase.py  __init__.py  worker.py
(+179 files in other folders)
