[project]
name = "icefarm"
version = "0.1.13"
dependencies = [
    "Flask",
    "flask-socketio",
    "websocket-client",
    "uvicorn",
    "pexpect",
    "psycopg[binary]",
    "pyudev",
    "requests",
    "schedule",
    "pyserial",
    "python-dotenv",
    "asgiref",
    "pytest",
    "msgpack"
]

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"icefarm.control" = ["templates/*.html", "assets/*.css"]
